<resources>
    <string name="app_name">MegaPack Lucky Block Addons for Minecraft PE</string>
    <string name="button_main_text">Open Lucky Block MegaPack</string>
    <string name="download_text">Start download</string>
    <string name="banner_ad" translatable="false">ca-app-pub-6600624160903181/4096192456</string>
    <string name="interstitial_ad" translatable="false">ca-app-pub-6600624160903181/1226486535</string>
    <integer name="count_Fragment">6</integer>
    <string name="button_dialog_no">Back</string>
    <string name="button_dialog_ok">Next step</string>
    <string name="install_ok">Installed successfully!</string>
    <string name="install_all">Everything is installed!!!</string>
    <string name="button_dialog_all">Rate Us</string>
    <string name="main_first_text">All-in-one lucky block megapack: maps, addons, skins!</string>
    <string name="main_second_text">Destroy lucky blocks and find unusual items!</string>
    <string name="main_third_text">"You'll never know what is waiting you in next lucky block! "</string>
    <string name="main_four_text">Find unusual weapons!</string>
    <string name="dialog_text_top">Installing...</string>

</resources>
