<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"

        android:scaleType="centerCrop"
        android:src="@drawable/custom_dialog_background"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewMessagelast"
        android:layout_alignTop="@+id/buttonnolast"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:alpha="0.8"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/new10700"

        android:text="@string/button_dialog_ok"
        android:textSize="22dp"
        android:gravity="center"
        android:textAlignment="gravity"
        app:layout_constraintBottom_toTopOf="@+id/buttonnolast"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessagelast" />

    <Button
        android:id="@+id/buttonnolast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewMessagelast"
        android:layout_below="@+id/textViewMessagelast"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:alpha="0.8"
        android:gravity="fill"
        android:textAlignment="center"
        android:background="@drawable/custom_button_red"
        android:fontFamily="@font/new10700"

        android:text="@string/button_dialog_no"

        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMessagelast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:autoSizeMaxTextSize="@dimen/activity_horizontal_margin"
        android:fontFamily="@font/new10700"
        android:text="@string/install_ok"
        android:textColor="#26c107"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

</android.support.constraint.ConstraintLayout>