<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativ_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wiki_background"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="@string/banner_ad"
        app:layout_anchorGravity="top|center"></com.google.android.gms.ads.AdView>

    <android.support.design.widget.CoordinatorLayout

        android:id="@+id/coordlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_weight="0"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/main_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"

                     />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <Button
                    android:id="@+id/mainButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout6"
                    android:layout_marginTop="11dp"
                    android:alpha="0.8"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/new10700"
                    android:gravity="center"
                    android:text="@string/button_main_text"
                    android:textAlignment="gravity"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/secondLineImage"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_weight="0"
                        android:src="@drawable/first" />

                    <TextView
                        android:id="@+id/secondLineText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/thirdLineImage"
                        android:fontFamily="@font/new10700"
                        android:gravity="fill"
                        android:paddingLeft="10dp"
                        android:text="@string/main_first_text"
                        android:textColor="@color/list_textcolor" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/firstLineImage"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_weight="0"
                        android:src="@drawable/second" />

                    <TextView
                        android:id="@+id/firstLineText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/thirdLineImage"
                        android:fontFamily="@font/new10700"
                        android:gravity="fill"
                        android:paddingLeft="10dp"
                        android:text="@string/main_second_text"
                        android:textColor="@color/list_textcolor" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout7"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fourLineImage"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_weight="0"
                        android:src="@drawable/third" />

                    <TextView
                        android:id="@+id/fourLineText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/thirdLineImage"
                        android:fontFamily="@font/new10700"
                        android:gravity="fill"
                        android:paddingLeft="10dp"
                        android:text="@string/main_third_text"
                        android:textColor="@color/list_textcolor" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/linearLayout4"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/thirdLineImage"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_weight="0"
                        android:src="@drawable/four" />


                    <TextView
                        android:id="@+id/thirdLineText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:fontFamily="@font/new10700"
                        android:gravity="fill"
                        android:paddingLeft="10dp"
                        android:text="@string/main_four_text"

                        android:textColor="@color/list_textcolor" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <android.support.design.widget.AppBarLayout
            android:id="@+id/main.appbar"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:layout_editor_absoluteY="39dp">

        </android.support.design.widget.AppBarLayout>

        <!-- <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            app:layout_anchor="@id/main.appbar"
            app:layout_anchorGravity="bottom|right|end"
            /> app:layout_anchor="@id/main.appbar"-->


    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>